--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -5,9 +5,6 @@
     <title>Title</title>
     <th:block th:insert="base :: header"></th:block>
     <style>
-        .jumbotron {
-            background-color: gainsboro;
-        }
         .nav{
             color: black;
             border-bottom-style: outset;
@@ -16,6 +13,9 @@
         }
         .container{
             background-color: white;
+        }
+        h1{
+            font-style: italic;
         }
     </style>
 </head>
