--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -15,22 +15,13 @@
             width: 100%;
             padding: 0;
         }
-        .container{
-            background-color: whitesmoke;
-        }
     </style>
 </head>
 <body>
 <div th:replace="base :: navlinks"></div>
 <div class="container">
-     <div class="row">
-        <div class="column">
-            <div class="card text-center">
-                <h3>swilliam01</h3>
-            </div>
-        </div>
-     </div>
-
+    <div class="jumbotron">
+    <h2 align="center">swilliam01</h2>
         <div class="column">
             <div class="card">
                 <ul class="nav">
@@ -40,6 +31,7 @@
                 </ul>
             </div>
         </div>
+    </div>
                 <ul class="w3-ul w3-hoverable w3-large">
                     <li>Repo 1</li>
                     <li>Repo 2</li>
