--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -11,7 +11,9 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <style>
             body {
-                background-color: white;
+                background-image:url("https://images.unsplash.com/photo-1518515344518-668eb0c53353?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5c02d5bd8de279db1a2f74ea59f9283d&auto=format&fit=crop&w=1350&q=80");
+                background-repeat: no-repeat;
+                background-size: cover;
             }
 
             .nav li {
@@ -25,6 +27,9 @@
                 background-color: #fff;
                 padding: 30px;
             }
+            .jumbotron{
+                background-image:url('https://images.unsplash.com/photo-1518515344518-668eb0c53353?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5c02d5bd8de279db1a2f74ea59f9283d&auto=format&fit=crop&w=1350&q=80');
+            }
 
         </style>
     </th:block>
@@ -34,7 +39,7 @@
 <div th:fragment="navlinks">
     <div class="w3-container">
         <div class="w3-bar w3-border w3-black">
-            <a class="w3-bar-item"><b>My Github</b></a>
+            <a class="w3-bar-item"><b style="font-size: 150%; font-style: italic">My Github</b></a>
             <a href="/" class="w3-bar-item w3-button w3-left">Home</a>
         </div>
     </div>
