--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -21,11 +21,10 @@
 </head>
 <body>
 <div th:replace="base :: navlinks"></div>
-<div class="jumbotron text-center">
-    <h1>JBCSep2018</h1>
-</div>
 <div class="container">
-
+<div class="jumbotron text-center">
+    <h1 align="center"><b><u>JBCSep2018</u></b></h1>
+</div>
     <ul class="nav">
         <li><h3>Members List <span class="w3-badge w3-small w3-gray w3-padding">21</span></h3></li>
     </ul><br>
@@ -37,5 +36,6 @@
         <li><a href="#">Member 5</a></li>
     </ul>
 </div>
+<div th:replace="base :: footer"></div>
 </body>
 </html>
