--- a/src/main/resources/templates/reposform.html
+++ b/src/main/resources/templates/reposform.html
@@ -17,20 +17,24 @@
 <div th:replace="base :: navlinks"></div>
 <div class="container">
 <div class="jumbotron">
-    <h2 align="center">Repo 1</h2>
-
+    <h1 style="font-style: italic" align="center"><b><u>Repo 1</u></b></h1><br>
+  <div class="column">
+    <div class="card">
     <ul class="nav">
         <li><h4>Forks()</h4></li>
         <li><h4>Pull Requests()</h4></li>
         <li><h4>Contributors()</h4></li>
+        <li><h4>Views()</h4></li>
     </ul>
+    </div>
+  </div>
 </div>
     <ul class="w3-ul w3-bordered w3-hoverable">
         <li>File 1</li>
         <li>File 2</li>
         <li>File 3</li>
     </ul>
-
 </div>
 </body>
+<div th:replace="base :: footer"></div>
 </html>
