--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -15,32 +15,36 @@
             width: 100%;
             padding: 0;
         }
+        h3{
+            border-bottom-style: outset;
+        }
+
 
     </style>
 </head>
 <body>
 <div th:replace="base :: navlinks"></div>
 <div class="container">
-    <div class="jumbotron">
-    <h1 style="font-style: italic" align="center"><b><u>swilliam01</u></b></h1><br>
-        <div class="column">
-            <div class="card">
+     <div class="row">
+       <div class="col-sm-4">
+                <h1 style="font-style: italic" align="center"><b><u>About Me</u></b></h1><br>
+                <h2 style="font-style: italic" align="center"><b>swilliam01</b></h2><br>
                 <ul class="nav">
                     <li><h4>Followers<span class="w3-badge w3-small w3-gray w3-padding">0</span></h4></li>
                     <li><h4>Following<span class="w3-badge w3-small w3-gray w3-padding">0</span></h4></li>
                 </ul>
-            </div>
-        </div>
-    </div>
-    <ul class="nav">
-        <li><h3><b>Repositories</b></h3></li>
-    </ul>
-    <ul class="w3-ul w3-hoverable w3-large">
+       </div>
+        <div class="col-sm-8">
+           <h3><b>Repositories</b></h3>
+
+            <ul class="w3-ul w3-hoverable w3-large">
                     <li>Repo 1</li>
                     <li>Repo 2</li>
                     <li>Repo 3</li>
                     <li>Repo 4</li>
                 </ul>
+        </div>
+     </div>
 </div>
 <div th:replace="base :: footer"></div>
 </body>
